--- a/addons/saving_account/views/saving_account_view.xml
+++ b/addons/saving_account/views/saving_account_view.xml
@@ -9,11 +9,12 @@
         <header>
           <button name="open_deposit_withdraw_form" string="Deposit/Withdraw" class="oe_highlight" 
           context="{'close_date': 'False'}" type="object"/>
+          <button name="action_close_account" string="Close Account" class="oe_highlight"
+          context="{'close_date': 'False'}" type="object"/>
         </header>
         <sheet>
         <group>
           <group>
-            <field name="account_no"/>
             <field name="account_type"/>
             <field name="name"/>
             <field name="email"/>
@@ -59,7 +60,7 @@
     <field name="name">Accounts</field>
     <field name="type">ir.actions.act_window</field>
     <field name="res_model">saving_account</field>
-    <field name="view_mode">tree,form,kanban</field>
+    <field name="view_mode">tree,form</field>
     <field name="context">{}</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
