--- a/addons/saving_account/report/term_account_template.xml
+++ b/addons/saving_account/report/term_account_template.xml
@@ -26,8 +26,8 @@
                 <td><t t-esc="line['account_no']"/></td>
                 <td><t t-esc="line['account_type']"/></td>
                 <td><t t-esc="line['name']"/></td>
-                <td><t t-esc="line['total_principal']"/></td>
-                <td><t t-esc="line['total_interest']"/></td>
+                <td><t t-esc="round(line['total_principal'], 2)"/></td>
+                <td><t t-esc="round(line['total_interest'], 4)"/></td>
               </tr>
             </t>
           </table>
