fix calculation and account open/close

--- a/addons/saving_account/views/saving_account_view.xml
+++ b/addons/saving_account/views/saving_account_view.xml
@@ -21,7 +21,7 @@
             <field name="phone"/>
           </group>
           <group>
-            <field name="open_date"/>
+            <field name="open_date" attrs="{'readonly': 1}"/>
             <field name="close_date" attrs="{'readonly': 1}"/>
           </group>
           <group>
