--- a/addons/saving_account/views/entry_view.xml
+++ b/addons/saving_account/views/entry_view.xml
@@ -11,7 +11,8 @@
             <field name="account_id" string="Account"/>
             <field name="entry_date" string="Entry Date"/>
             <field name="ledger" string="Ledger"/>
-            <field name="entry_type" string="Entry Type"/>
+            <field name="entry_type" string="Entry Type" attrs="{'invisible': [('ledger', '!=', 'interest')]}"/>
+            <field name="entry_type_principal" string="Entry Type" attrs="{'invisible': [('ledger', '!=', 'principal')]}"/>
             <field name="amount" string="Amount" digits="[16, 2]"/>
             <field name="description" string="Description"/>
             <field name="reference" string="Reference"/>
@@ -31,7 +32,8 @@
             <field name="account_id" string="Account" attrs="{'readonly': 1}"/>
             <field name="entry_date" string="Entry Date" attrs="{'readonly': 1}"/>
             <field name="ledger" string="Ledger" attrs="{'readonly': 1}"/>
-            <field name="entry_type_principal" string="Entry Type"/>
+            <field name="entry_type" string="Entry Type" attrs="{'invisible': [('ledger', '!=', 'interest')]}"/>
+            <field name="entry_type_principal" string="Entry Type" attrs="{'invisible': [('ledger', '!=', 'principal')]}"/>
             <field name="amount" string="Amount" digits="[6, 2]"/>
             <field name="description" string="Description"/>
             <field name="reference" string="Reference"/>
