--- a/addons/saving_account/wizard/term_account_view.xml
+++ b/addons/saving_account/wizard/term_account_view.xml
@@ -12,6 +12,7 @@
         </group>
         <footer>
           <button name="action_print_report" type="object" string="Print" class="btn-primary"/>
+          <button name="action_send_email" type="object" string="Send Email" class="btn-primary"/>
           <button string="Cancel" class="btn-secondary" special="cancel"/>
         </footer>
       </form>
