add email to field

--- a/addons/saving_account/wizard/term_individual_account_view.xml
+++ b/addons/saving_account/wizard/term_individual_account_view.xml
@@ -10,6 +10,7 @@
           <field name="account_id"/>
           <field name="date_from"/>
           <field name="date_to"/>
+          <field name="email_to"/>
         </group>
         <footer>
           <button name="action_print_report" type="object" string="Print" class="btn-primary"/>
