--- a/addons/saving_account/wizard/term_account_view.xml
+++ b/addons/saving_account/wizard/term_account_view.xml
@@ -9,6 +9,7 @@
         <group>
           <field name="date_from"/>
           <field name="date_to"/>
+          <field name="email_to"/>
         </group>
         <footer>
           <button name="action_print_report" type="object" string="Print" class="btn-primary"/>
