remove confirm button

--- a/addons/saving_account/views/saving_account_view.xml
+++ b/addons/saving_account/views/saving_account_view.xml
@@ -8,8 +8,7 @@
       <form>
         <header>
           <button name="open_deposit_withdraw_form" string="Deposit/Withdraw" class="oe_highlight" 
-          context="{'close_date': 'False'}" type="object"
-          confirm="Confirm to proceed transaction? 確定進行此項交易?"/>
+          context="{'close_date': 'False'}" type="object"/>
           <button name="action_close_account" string="Close Account" class="oe_highlight"
           context="{'close_date': 'False'}" type="object"
           confirm="Confirm closing this account? No further transaction is allowed after Account Closing! 
