--- a/addons/saving_account/views/entry_view.xml
+++ b/addons/saving_account/views/entry_view.xml
@@ -26,7 +26,7 @@
     <field name="name">saving_account.entry.form</field>
     <field name="model">saving_account.entry</field>
     <field name="arch" type="xml">
-      <form>
+      <form create="false">
         <sheet>
           <group>
             <field name="account_id" string="Account" attrs="{'readonly': 1}"/>
