--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -5,7 +5,8 @@
     <t t-call="web.html_container">
       <t t-call="web.external_layout">
         <div class="page">
-          <table style="table-layout:fixed; table-width:full">
+        <div class="text-right">
+          <table style="table-layout:fixed; table-width:full; text: right">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
               <td><t t-esc="form['date_to']"/></td>
@@ -63,6 +64,7 @@
               <td><t t-esc="'{0:,.2f}'.format(int(line['interest_credit_amount']))"/></td>
             </tr>
           </table>
+        </div>
         </div>
       </t>
     </t>
