--- a/addons/saving_account/report/term_individual_account_template.xml
+++ b/addons/saving_account/report/term_individual_account_template.xml
@@ -5,7 +5,8 @@
     <t t-call="web.html_container">
       <t t-call="web.external_layout">
         <div class="page">
-          <table style="table-layout:fixed; table-width:full">
+        <div class="text-right">
+          <table style="table-layout:fixed; table-width:full; text: right">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
               <td><t t-esc="form['date_from']"/></td>
@@ -56,6 +57,7 @@
               </tr>
             </t>
           </table>
+        </div>
         </div>
       </t>
     </t>
