--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -5,15 +5,14 @@
     <t t-call="web.html_container">
       <t t-call="web.external_layout">
         <div class="page">
-        <div class="text-right">
-          <table style="table-layout:fixed; table-width:full; text: right">
+          <table style="table-layout:fixed; table-width:full; text:center">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
               <td><t t-esc="form['date_to']"/></td>
             </tr>
           </table>
           <h5><center>Daily Financial Summary</center></h5>
-          <table class="table table-bordered" style="table-layout:fixed">
+          <table class="table table-bordered" style="table-layout:fixed; text:right">
             <tr>
               <th>Items</th>
               <th>Transactions</th>
@@ -64,7 +63,6 @@
               <td><t t-esc="'{0:,.2f}'.format(int(line['interest_credit_amount']))"/></td>
             </tr>
           </table>
-        </div>
         </div>
       </t>
     </t>
