--- a/addons/saving_account/report/term_account_template.xml
+++ b/addons/saving_account/report/term_account_template.xml
@@ -6,14 +6,14 @@
       <t t-call="web.external_layout">
         <div class="page">
         <div class="text-right">
-          <table style="table-layout:fixed; table-width:full; text: right">
+          <table style="table-layout:fixed; table-width:full; text:center">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
               <td><t t-esc="form['date_to']"/></td>
             </tr>
           </table>
           <h5><center>Term Account Summary</center></h5>
-          <table class="table table-bordered" style="table-layout:fixed">
+          <table class="table table-bordered" style="table-layout:fixed; text:right">
             <tr>
               <th>Acc. No.</th>
               <th>Acc. Type</th>
