--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -23,44 +23,44 @@
             <tr>
               <td>Total Accounts</td>
               <td><t t-esc="report['account_transaction']"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['account_vip']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['account_normal']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['account_amount']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['account_vip'], 2)"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['account_normal']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['account_amount']))"/></td>
             </tr>
             <tr>
               <td>Cash In</td>
               <td><t t-esc="report['cash_in_transaction']"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['cash_in_vip']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['cash_in_normal']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['cash_in_amount']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['cash_in_vip']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['cash_in_normal']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['cash_in_amount']))"/></td>
             </tr>
             <tr>
               <td>Cash Out</td>
               <td><t t-esc="report['cash_out_transaction']"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['cash_out_vip']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['cash_out_normal']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['cash_out_amount']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['cash_out_vip']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['cash_out_normal']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['cash_out_amount']))"/></td>
             </tr>
             <tr>
               <td>Total Interest</td>
               <td><t t-esc="report['total_interest_transaction']"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['total_interest_vip']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['total_interest_normal']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['total_interest_amount']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['total_interest_vip']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['total_interest_normal']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['total_interest_amount']))"/></td>
             </tr>
             <tr>
               <td>Accrued Interest</td>
               <td><t t-esc="report['accrued_interest_transaction']"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['accrued_interest_vip']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['accrued_interest_normal']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['accrued_interest_amount']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['accrued_interest_vip']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['accrued_interest_normal']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['accrued_interest_amount']))"/></td>
             </tr>
             <tr>
               <td>Interest Credit</td>
               <td><t t-esc="report['interest_credit_transaction']"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['interest_credit_vip']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['interest_credit_normal']))"/></td>
-              <td><t t-esc="'{0:,.2f}'.format(int(line['interest_credit_amount']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['interest_credit_vip']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['interest_credit_normal']))"/></td>
+              <td><t t-esc="'{0:,.2f}'.format(int(report['interest_credit_amount']))"/></td>
             </tr>
           </table>
         </div>
