--- a/addons/saving_account/report/term_account_template.xml
+++ b/addons/saving_account/report/term_account_template.xml
@@ -9,7 +9,7 @@
           <table style="table-layout:fixed; table-width:full; text:center">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
-              <td><t t-esc="form['date_to']"/></td>
+              <td><t t-esc="form['date_from']"/></td>
             </tr>
           </table>
           <h5><center>Term Account Summary</center></h5>
