--- a/addons/saving_account/report/term_individual_account_template.xml
+++ b/addons/saving_account/report/term_individual_account_template.xml
@@ -43,10 +43,7 @@
                   <t t-else="">
                     <td></td>
                   </t>
-                  <t t-if="line.get('entry_type')=='interest'">
-                    <td><t t-esc="'{0:,.2f}'.format(int(line['amount']))"/></td>
-                  </t>
-                  <t t-elif="line.get('entry_type')=='credit_interest'">
+                  <t t-if="line.get('entry_type')=='credit_interest'">
                     <td><t t-esc="'{0:,.2f}'.format(int(line['amount']))"/></td>
                   </t>
                   <t t-else="">
