--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -5,14 +5,14 @@
     <t t-call="web.html_container">
       <t t-call="web.external_layout">
         <div class="page">
-          <table style="table-layout:fixed; table-width:full; text:center">
+          <table style="table-layout:fixed; table-width:full; text-align:center">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
               <td><t t-esc="form['date_from']"/></td>
             </tr>
           </table>
           <h5><center>Daily Financial Summary</center></h5>
-          <table class="table table-bordered" style="table-layout:fixed; text:right">
+          <table class="table table-bordered" style="table-layout:fixed; text-align:right">
             <tr>
               <th>Items</th>
               <th>Transactions</th>
