--- a/addons/saving_account/report/term_account_template.xml
+++ b/addons/saving_account/report/term_account_template.xml
@@ -28,7 +28,7 @@
                 <td><t t-esc="line['account_type']"/></td>
                 <td><t t-esc="line['name']"/></td>
                 <td><t t-esc="line['total_principal']"/></td>
-                <td><t t-esc="line['last_interest']"/></td>
+                <td><t t-esc="line['total_interest']"/></td>
               </tr>
             </t>
           </table>
