fix cron job error

--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -63,6 +63,20 @@
               <td><t t-esc="'{:,.2f}'.format(float(report['interest_credit_normal']))"/></td>
               <td><t t-esc="'{:,.2f}'.format(float(report['interest_credit_amount']))"/></td>
             </tr>
+            <tr>
+              <td>Total Interest Credit</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Total Amount</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
           </table>
         </div>
       </t>
