--- a/addons/saving_account/report/term_account_template.xml
+++ b/addons/saving_account/report/term_account_template.xml
@@ -20,7 +20,7 @@
               <th>Name</th>
               <th>Balance</th>
               <th>Last Int. Crdt.</th>
-              <th>Year-to-Day Int. Crdt.</th>
+              <th>Total Int. Crdt.</th>
         
             </tr>
             <t t-foreach="accounts" t-as="line">
