--- a/addons/saving_account/wizard/term_account_view.xml
+++ b/addons/saving_account/wizard/term_account_view.xml
@@ -7,6 +7,7 @@
     <field name="arch" type="xml">
       <form string="Print Term Account Report">
         <group>
+          <field name="account_type"/>
           <field name="date_from"/>
           <field name="email_to"/>
         </group>
