--- a/addons/saving_account/report/term_individual_account_template.xml
+++ b/addons/saving_account/report/term_individual_account_template.xml
@@ -55,9 +55,9 @@
             </t>
             <tr>
               <td>Total</td>
-              <td><t t-esc="total_withdraw"/></td>
-              <td><t t-esc="total_deposit"/></td>
-              <td><t t-esc="total_interest"/></td>
+              <td><t t-esc="'{:,.2f}'.format(float(total_withdraw))"/></td>
+              <td><t t-esc="'{:,.2f}'.format(float(total_deposit))"/></td>
+              <td><t t-esc="'{:,.2f}'.format(float(total_interest))"/></td>
             </tr>
           </table>
         </div>
