--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -23,7 +23,12 @@
             <tr>
               <td>Total Active Account</td>
               <td><t t-esc="report['account_transaction']"/></td>
-              <td><t t-esc="'{:,.2f}'.format(float(report['account_vip']))"/></td>
+              <t t-if="float(report['account_vip']) >= 0">
+                <td><t t-esc="'{:,.2f}'.format(float(report['account_vip']))"/></td>
+              </t>
+              <t t-else="">
+                <td><t t-esc="('{:,.2f}'.format(float(report['account_vip'])))"/></td>
+              </t>
               <td><t t-esc="'{:,.2f}'.format(float(report['account_normal']))"/></td>
               <td><t t-esc="'{:,.2f}'.format(float(report['account_amount']))"/></td>
             </tr>
