--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -27,10 +27,20 @@
                 <td><t t-esc="'{:,.2f}'.format(float(report['account_vip']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="('{:,.2f}'.format(float(report['account_vip'])))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(float(report['account_vip']))"/></td>
               </t>
-              <td><t t-esc="'{:,.2f}'.format(float(report['account_normal']))"/></td>
-              <td><t t-esc="'{:,.2f}'.format(float(report['account_amount']))"/></td>
+              <t t-if="float(report['account_normal']) >= 0">
+                <td><t t-esc="'{:,.2f}'.format(float(report['account_normal']))"/></td>
+              </t>
+              <t t-else="">
+                <td><t t-esc="'({:,.2f})'.format(float(report['account_normal']))"/></td>
+              </t>
+              <t t-if="float(report['account_amount']) >= 0">
+                <td><t t-esc="'{:,.2f}'.format(float(report['account_amount']))"/></td>
+              </t>
+              <t t-else="">
+                <td><t t-esc="'({:,.2f})'.format(float(report['account_amount']))"/></td>
+              </t>
             </tr>
             <tr>
               <td>Cash In</td>
@@ -42,9 +52,9 @@
             <tr>
               <td>Cash Out</td>
               <td><t t-esc="report['cash_out_transaction']"/></td>
-              <td><t t-esc="'{:,.2f}'.format(float(report['cash_out_vip']))"/></td>
-              <td><t t-esc="'{:,.2f}'.format(float(report['cash_out_normal']))"/></td>
-              <td><t t-esc="'{:,.2f}'.format(float(report['cash_out_amount']))"/></td>
+              <td><t t-esc="'({:,.2f})'.format(float(report['cash_out_vip']))"/></td>
+              <td><t t-esc="'({:,.2f})'.format(float(report['cash_out_normal']))"/></td>
+              <td><t t-esc="'({:,.2f})'.format(float(report['cash_out_amount']))"/></td>
             </tr>
             <tr>
               <td>Total Interest</td>
