--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -27,19 +27,19 @@
                 <td><t t-esc="'{:,.2f}'.format(float(report['account_vip']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="'({:,.2f})'.format(float(report['account_vip']))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(abs(float(report['account_vip'])))"/></td>
               </t>
               <t t-if="float(report['account_normal']) >= 0">
                 <td><t t-esc="'{:,.2f}'.format(float(report['account_normal']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="'({:,.2f})'.format(float(report['account_normal']))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(abs(float(report['account_normal'])))"/></td>
               </t>
               <t t-if="float(report['account_amount']) >= 0">
                 <td><t t-esc="'{:,.2f}'.format(float(report['account_amount']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="'({:,.2f})'.format(float(report['account_amount']))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(abs(float(report['account_amount'])))"/></td>
               </t>
             </tr>
             <tr>
@@ -56,19 +56,19 @@
                 <td><t t-esc="'{:,.2f}'.format(float(report['cash_out_vip']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="'({:,.2f})'.format(float(report['cash_out_vip']))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(abs(float(report['cash_out_vip'])))"/></td>
               </t>
               <t t-if="float(report['cash_out_normal']) >= 0">
                 <td><t t-esc="'{:,.2f}'.format(float(report['cash_out_normal']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="'({:,.2f})'.format(float(report['cash_out_normal']))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(abs(float(report['cash_out_normal'])))"/></td>
               </t>
               <t t-if="float(report['cash_out_amount']) >= 0">
                 <td><t t-esc="'{:,.2f}'.format(float(report['cash_out_amount']))"/></td>
               </t>
               <t t-else="">
-                <td><t t-esc="'({:,.2f})'.format(float(report['cash_out_amount']))"/></td>
+                <td><t t-esc="'({:,.2f})'.format(abs(float(report['cash_out_amount'])))"/></td>
               </t>
             </tr>
             <tr>
